fix: fix weird line in modal on ios mobile devices

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -140,7 +140,8 @@ body {
   font-family: Arial, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5
+  background-color: #f5f5f5;
+  min-height: 100vh
 }
 
 .main-container {
